fix spacing

--- a/resources/assets/admin/css/settings_global.scss
+++ b/resources/assets/admin/css/settings_global.scss
@@ -65,7 +65,6 @@
   padding-right: 20px;
   display: flex;
   position: relative;
-  margin-left: -10px;
   .ff_menu_toggle{
     padding-top: 4px;
   }
